cluster-update/templates/cloud-credential-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloud-credential-patcher-allow-egress
  namespace: openshift-cluster-version
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
  podSelector:
    matchLabels:
      app: cloud-credential-patcher
  policyTypes:
  - Egress
